fix spacing of logo and "A to Z text"

--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -57,6 +57,13 @@
             g + g path {
                 fill: $brand-pane-alt-light;
             }
+            
+            @media ($tablet) {
+                display: inline-block;
+                margin-bottom: -16px;
+            }
+            
+            
         }
 
         .branding-copy {
